--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,5 +1,107 @@
+@import url('./variables.css');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
+
+body {
+    background-color: var(--dark1);
+    height: 100vh;
+}
+
+/* -------------- HEADER -------------- */
+
+header {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 1rem;
+    flex-wrap: wrap;
+    padding: .8rem;
+    background-color: var(--dark6);
+    min-height: 50px;
+    box-sizing: border-box;
+}
+
+header .box-img-header {
+    height: 100%;
+}
+
+header .box-img-header .img-logo {
+    max-width: 80px;
+    height: 100%;
+}
+
+header nav {
+    display: flex;
+    gap: 2rem;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+header nav .nav-links {
+    text-decoration: none;
+    color: var(--white);
+    transition: .5s;
+}
+
+header nav .nav-links:hover {
+    color: var(--dark4);
+    text-decoration: underline;
+}
+
+header .box-btn-actions {
+    display: flex;
+    gap: 1rem;
+}
+
+header .box-btn-actions button {
+    pad: .6rem;
+    font-size: 1rem;
+    border-radius: 6px;
+    cursor: pointer;
+}
+
+header .box-btn-actions .btn-action {
+    background-color: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid var(--white);
+    color: var(--white);
+    padding: .5rem;
+    transition: .5s;
+}
+
+header .box-btn-actions .btn-action:hover {
+    background-color: var(--white);
+    color: var(--dark6);
+}
+
+header .box-btn-actions .btn-action:last-child:hover {
+    color: var(--blue);
+}
+
+/* -------------- HEADER -------------- */
+
+/* -------------- MAIN -------------- */
+
+main {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+main section {
+    padding: 4rem;
+}
+
+/* -------------- MAIN -------------- */
+
+/* -------------- FOOTER -------------- */
+
+/* -------------- FOOTER -------------- */
