--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -59,8 +59,8 @@ header .box-btn-actions {
     gap: 1rem;
 }
 
-header .box-btn-actions button {
-    pad: .6rem;
+button {
+    padding: .6rem;
     font-size: 1rem;
     border-radius: 6px;
     cursor: pointer;
@@ -100,8 +100,124 @@ main section {
     padding: 4rem;
 }
 
+.first-section {
+    display: flex;
+    justify-content: space-evenly;
+    gap: 2rem;
+    flex-wrap: wrap;
+    align-items: center;
+    min-height: 650px;
+    color: var(--white);
+}
+
+.first-section > div {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    min-width: 300px;
+}
+
+h1 {
+    font-size: 2rem;
+    color: var(--white);
+    letter-spacing: 8px;
+}
+
+strong {
+    color: var(--cyan1);
+}
+
+.first-section .box-img-main {
+    max-width: 450px;
+    padding: 3rem;
+}
+
+.first-section .img-profile {
+    border-radius: 50%;
+    width: 100%;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+:is(.second-section,.fourth-section) {
+    background-color: var(--dark2);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+}
+
+.second-section ul {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5rem;
+    flex-wrap: wrap;
+}
+
+.second-section ul li img {
+    width: 100px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.title {
+    color: var(--dark5);
+    text-align: center;
+}
+
+.third-section {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.third-section > div {
+    display: flex;
+    gap: 4rem;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.third-section > div img {
+    width: 200px;
+    border-radius: 10px;
+}
+
+.third-section > div p {
+    max-width: 600px;
+    color: var(--white);
+    text-align: justify;
+}
+
 /* -------------- MAIN -------------- */
 
 /* -------------- FOOTER -------------- */
+
+footer {
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    color: var(--white);
+    gap: 2rem;
+}
+
+footer > div {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    flex-wrap: wrap;
+}
+
+footer a {
+    color: var(--white);
+    font-size: 2rem;
+    transition: .5s;
+}
+
+footer a:hover {
+    color: var(--dark3);
+}
 
 /* -------------- FOOTER -------------- */
